Fix mobile alignments for headers

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,7 +19,6 @@
 }
 
 h1 {
-    min-width: 350px;
     font-family: var(--header-text);
     font-weight: 400;
     span {
@@ -70,6 +69,7 @@ html {
                 padding: 100px 50px 100px 100px;
                 color: var(--white);
                 h1 {
+                    min-width: 350px;
                     font-size: 50px;
                     line-height: 50px;
                     margin-bottom: 5px;
@@ -287,6 +287,7 @@ html {
                 flex-direction: column;
                 h1, h4 {
                     text-align: center;
+                    min-width: unset !important;
                 }
                 .bioColumn {
                     padding: 50px;
@@ -301,7 +302,7 @@ html {
                     }
                 }
                 .infoColumn {
-                    padding: 50px;
+                    padding: 30px;
                     width: 100%;
                     height: 100%;
                     .educCard {
@@ -313,10 +314,19 @@ html {
                         display: flex;
                         flex-direction: column;
                         align-items: center;
+                        #main-col {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            p {
+                                text-align: center;
+                            }
+                        }
                         .thumbnail {
                             width: 100% !important;
                             min-width: 200px !important;
                             height: 100%;
+                            margin-bottom: -15px;
                         }
                     }
                 }
